--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
     "@aws-amplify/ui-angular": "^4.0.9",
+    "@ng-bootstrap/ng-bootstrap": "^15.1.1",
     "aws-amplify": "^5.3.11",
     "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.11.1",
