--- a/angular.json
+++ b/angular.json
@@ -32,7 +32,8 @@
             ],
             "styles": [
               "src/styles.css",
-              "node_modules/@aws-amplify/ui-angular/theme.css"
+              "node_modules/@aws-amplify/ui-angular/theme.css",
+              "node_modules/primeng/resources/primeng.min.css"
             ],
             "scripts": []
           },
@@ -97,7 +98,8 @@
             ],
             "styles": [
               "src/styles.css",
-              "node_modules/@aws-amplify/ui-angular/theme.css"
+              "node_modules/@aws-amplify/ui-angular/theme.css",
+              "node_modules/primeng/resources/primeng.min.css"
             ],
             "scripts": []
           }
