--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^16.2.0",
-    "@angular/cdk": "^16.2.4",
+    "@angular/cdk": "^16.2.9",
     "@angular/common": "^16.2.0",
     "@angular/compiler": "^16.2.0",
     "@angular/core": "^16.2.0",
@@ -25,6 +25,9 @@
     "aws-amplify": "^5.3.11",
     "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.11.1",
+    "hammerjs": "^2.0.8",
+    "ng-gallery": "^11.0.0",
+    "primeng": "^16.5.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
