--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@aws-amplify/ui-angular": "^4.0.9",
     "@ng-bootstrap/ng-bootstrap": "^15.1.1",
     "aws-amplify": "^5.3.11",
+    "aws-rum-web": "^1.15.0",
     "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.11.1",
     "hammerjs": "^2.0.8",
