--- a/angular.json
+++ b/angular.json
@@ -31,7 +31,7 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css",
+              "src/styles.scss",
               "node_modules/@aws-amplify/ui-angular/theme.css",
               "node_modules/primeng/resources/primeng.min.css"
             ],
@@ -97,7 +97,7 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css",
+              "src/styles.scss",
               "node_modules/@aws-amplify/ui-angular/theme.css",
               "node_modules/primeng/resources/primeng.min.css"
             ],
