--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.11.1",
     "hammerjs": "^2.0.8",
+    "jquery": "^3.7.1",
     "ng-gallery": "^11.0.0",
     "primeng": "^16.5.1",
     "rxjs": "~7.8.0",
@@ -40,6 +41,7 @@
     "@angular/compiler-cli": "^16.2.0",
     "@angular/localize": "^16.2.5",
     "@types/jasmine": "~4.3.0",
+    "@types/jquery": "^3.5.29",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
