--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "hammerjs": "^2.0.8",
     "jquery": "^3.7.1",
     "ng-gallery": "^11.0.0",
+    "page-flip": "^2.0.7",
     "primeng": "^16.5.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
